k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web-api
  name: web-api
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: web-api
